# mises-browser-core

./: .boto  .gcs_entries  .gitignore  .mises_gclient  .mises_latest_successful_sync.json  917658910@qq.com  917658910@qq.com.pub  BUILD.gn  DEPS  README.md  cg.txt  chromium_log.txt  components-policy-resources-policy_templates.json.patch  mises_paks.gni  mises_repack_locales.gni  package-lock.json  package.json  patch_updater.py  push_src.sh  rename.sh  trace.txt  tsconfig.json  version.version
android/: BUILD.gn  android_browser_tests.gni  mises_android_wireguard_sources.gni  mises_java_resources.gni  mises_java_sources.gni  mises_xml_preprocessor.gni  xml_processor.py  xml_processor.pydeps
android/feed/: mises_feed_java_sources.gni
android/java/: AndroidManifest.xml  AndroidManifest_intent_filters.xml  AndroidManifest_user_permissions.xml  proguard.flags
app/: BUILD.gn  access_code_cast_strings.grdp  app-entitlements-mises.plist  app_management_strings.grdp  bookmarks_strings.grdp  bookmarks_strings_override.grdp  certificate_manager.grdp  entitlements.gni  extensions_strings.grdp  extensions_strings_override.grdp  generated_resources.grd  generated_resources_override.grd  gmc_strings.grdp  ios_mises_strings.grdp  media_router_strings.grdp  mises_command_line_helper.cc  mises_command_line_helper.h  mises_generated_resources.grd  mises_main_delegate.cc  mises_main_delegate.h  mises_settings_strings.grdp  mises_strings.grd  mises_strings_override.grd  nearby_share_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  os_settings_strings_override.grdp  password_manager_ui_strings.grdp  printing_strings.grdp  profiles_strings.grdp  profiles_strings_override.grdp  settings_mises_strings.grdp  settings_mises_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  supervised_user_error_page_strings.grdp  support_tool_strings.grdp  vr_strings.grdp  web_time_limit_error_page_strings.grdp  (+1 more)
app/android/: BUILD.gn
app/linux/: BUILD.gn
app/mac/: BUILD.gn
app/resources/: mises_generated_resources_am.xtb  mises_generated_resources_ar.xtb  mises_generated_resources_bg.xtb  mises_generated_resources_bn.xtb  mises_generated_resources_ca.xtb  mises_generated_resources_cs.xtb  mises_generated_resources_da.xtb  mises_generated_resources_de.xtb  mises_generated_resources_el.xtb  mises_generated_resources_en-GB.xtb  mises_generated_resources_es-419.xtb  mises_generated_resources_es.xtb  mises_generated_resources_et.xtb  mises_generated_resources_fa.xtb  mises_generated_resources_fi.xtb  mises_generated_resources_fil.xtb  mises_generated_resources_fr-CA.xtb  mises_generated_resources_fr.xtb  mises_generated_resources_gl.xtb  mises_generated_resources_gu.xtb  mises_generated_resources_hi.xtb  mises_generated_resources_hr.xtb  mises_generated_resources_hu.xtb  mises_generated_resources_id.xtb  mises_generated_resources_it.xtb  mises_generated_resources_iw.xtb  mises_generated_resources_ja.xtb  mises_generated_resources_kn.xtb  mises_generated_resources_ko.xtb  mises_generated_resources_lt.xtb  mises_generated_resources_lv.xtb  mises_generated_resources_ml.xtb  mises_generated_resources_mr.xtb  mises_generated_resources_ms.xtb  mises_generated_resources_nl.xtb  mises_generated_resources_no.xtb  mises_generated_resources_pl.xtb  mises_generated_resources_pt-BR.xtb  mises_generated_resources_pt-PT.xtb  mises_generated_resources_ro.xtb  (+14 more)
app/theme/: BUILD.gn  mises_theme_resources.grd  mises_unscaled_resources.grd
app/vector_icons/: BUILD.gn  vector_icons.cc.template
browser/: BUILD.gn  about_flags.cc  browser_context_keyed_service_factories.cc  browser_context_keyed_service_factories.h  extension_web_contents_helper.cc  extension_web_contents_helper.h  mises_browser_main_extra_parts.cc  mises_browser_main_parts.cc  mises_browser_main_parts.h  mises_browser_main_parts_mac.h  mises_browser_main_parts_mac.mm  mises_browser_process.cc  mises_browser_process.h  mises_browser_process_impl.cc  mises_browser_process_impl.h  mises_content_browser_client.cc  mises_content_browser_client.h  mises_drm_tab_helper.cc  mises_drm_tab_helper.h  mises_local_state_prefs.cc  mises_local_state_prefs.h  mises_profile_prefs.cc  mises_profile_prefs.h  mises_shell_integration.cc  mises_shell_integration_mac.h  mises_shell_integration_mac.mm  mises_tab_helpers.cc  mises_tab_helpers.h  sources.gni  update_util.cc
browser/android/: BUILD.gn  mises_feature_util.cc  mises_local_state_android.cc  mises_relaunch_utils.cc
browser/autocomplete/: mises_autocomplete_scheme_classifier.cc  mises_autocomplete_scheme_classifier.h  sources.gni
browser/brave_wallet/: BUILD.gn  DEPS  asset_discovery_manager_unittest.cc  asset_ratio_service_factory.cc  asset_ratio_service_factory.h  blockchain_images_source.cc  blockchain_images_source.h  blockchain_images_source_unittest.cc  brave_wallet_auto_pin_service_factory.cc  brave_wallet_auto_pin_service_factory.h  brave_wallet_context_utils.cc  brave_wallet_ethereum_chain_browsertest.cc  brave_wallet_event_emitter_browsertest.cc  brave_wallet_ipfs_service_factory.cc  brave_wallet_ipfs_service_factory.h  brave_wallet_p3a_unittest.cc  brave_wallet_pin_service_factory.cc  brave_wallet_pin_service_factory.h  brave_wallet_policy_browsertest.cc  brave_wallet_prefs_unittest.cc  brave_wallet_provider_delegate_impl.cc  brave_wallet_provider_delegate_impl.h  brave_wallet_provider_delegate_impl_helper.cc  (+36 more)
common/: BUILD.gn  brave_channel_info.cc  brave_channel_info_posix.cc  brave_content_client.cc  brave_services_key_helper.cc  mises_renderer_configuration.mojom  resource_bundle_helper.cc  resource_bundle_helper.h
ios/: BUILD.gn  CPPLINT.cfg  Info.plist  cplink.sh  sync.sh
net/: BUILD.gn  sources.gni
renderer/: BUILD.gn  DEPS  mises_content_renderer_client.cc  mises_content_renderer_client.h  mises_render_thread_observer.cc  mises_render_thread_observer.h  sources.gni
resources/: BUILD.gn  mises_grit.gni  resource_ids.spec
test/: BUILD.gn  testing.gni
utility/: BUILD.gn  DEPS  sources.gni
(+4101 files in other folders)
